--- a/javascript.html
+++ b/javascript.html
@@ -119,8 +119,6 @@
 
     <div class="p-4">
            <div class="input-group mb-3 w-75">
-                <h5 class="my-1 right-text-width">P.O No</h5>
-                <input type="text" class="form-control" aria-label="Text input with dropdown button">
                 <table class="table table-striped w-50 mx-auto" id="TableDisplay">
                   <thead id="myHeader">
                     <tr class="bg-info">
@@ -136,8 +134,29 @@
 
                   </tbody>
               </table>
-              
             </div>
+
+            <div class="input-group mb-3 w-75">
+              <h5 class="my-1 right-text-width">P.O No</h5>
+              <input type="text" class="form-control" aria-label="Text input with dropdown button">
+              <table class="table table-striped w-50 mx-auto" id="TableDisplay">
+                <thead id="myHeader">
+                  <tr class="bg-info">
+                    <div>
+                       <th class="col">Index</th>
+                       <th class="col">Name</th>
+                       <th class="col">Company</th>
+                       <th class="col">Email</th>
+                    </div>
+                  </tr>
+                </thead>
+                <tbody id="myTable" >
+
+                </tbody>
+            </table>
+          </div>
+
+
            <div class="input-group mb-3 w-75">
                 <h5 class=" my-1 right-text-width">Batch No</h5>
                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
