--- a/javascript.html
+++ b/javascript.html
@@ -32,7 +32,7 @@
          </section>
     </header>
   <main class="main p-4">
-    <div class="p-2">
+    <div class="p-2 MainMargin">
            <div class="input-group mb-3 w-75">
                 <h5 class="mx-2 my-1 text-Width">Date</h5>
                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
@@ -55,7 +55,7 @@
                   <li><a class="dropdown-item" href="#">Separated link</a></li>
                 </ul>
             </div>
-           <div class="input-group mb-3   w-75">
+           <div class="input-group mb-3 w-75">
                 <h5 class="mx-2 my-1 text-Width">Project</h5>
                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
@@ -78,8 +78,8 @@
 
             </div>
 
-           <div class="input-group mb-3   w-75">
-                <h5 class="mx-2 my-1 text-Width">Item Code</h5>
+           <div class="input-group mb-3 w-75">
+                <h5 class="mx-2 text-Width">Item Code</h5>
                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
                 <ul class="dropdown-menu dropdown-menu-end">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -117,8 +117,8 @@
             </div>
     </div>
 
-    <div class="p-4">
-           <div class="input-group mb-3 w-75">
+    <div>
+          <div class="input-group mb-3 w-75">
                 <table class="table table-striped w-50 mx-auto" id="TableDisplay">
                   <thead id="myHeader">
                     <tr class="bg-info">
@@ -134,8 +134,8 @@
 
                   </tbody>
               </table>
-            </div>
-
+          </div>
+          
             <div class="input-group mb-3 w-75">
               <h5 class="my-1 right-text-width">P.O No</h5>
               <input type="text" class="form-control" aria-label="Text input with dropdown button">
@@ -156,7 +156,6 @@
             </table>
           </div>
 
-
            <div class="input-group mb-3 w-75">
                 <h5 class=" my-1 right-text-width">Batch No</h5>
                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
@@ -175,13 +174,13 @@
             </div>
 
            <div class="input-group mb-3 d-flex">
-                 <h5 class=" my-1">Rate/Unit</h5>
+                 <h5 class="inputMargin">Rate/Unit</h5>
                 <input type="text" class="form-control mx-2" aria-label="Text input with dropdown button">
-                 <h5 class="mx-2 my-1">Amount</h5>
+                 <h5 class="my-1">Amount</h5>
                 <input type="text" class="form-control mx-2" aria-label="Text input with dropdown button">
             </div>
 
-           <div class="input-group mb-3 w-100">
+           <div class="input-group mb-3 w-75">
                 <h5 class="my-1 right-text-width">Representative</h5>
                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
@@ -193,7 +192,7 @@
                   <li><a class="dropdown-item" href="#">Separated link</a></li>
                 </ul>
             </div>
-           <div class="input-group mb-3 w-100">
+           <div class="input-group mb-3 w-75">
                 <h5 class=" my-1 right-text-width">Purchase A/C</h5>
                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
